# Oliv-Frontend

./: .gitignore  README.md
Agent2Agent/: questions.md
CommunityBuildUp/community-build-up/: package.json  playwright.config.ts
ContextEngineering/: ContextEngineering.md
Coursera_Rust/: materials.md  over-ai-pair-programming-Github-Copilot.md
Coursera_Rust/L5MermoryAwareAgent/: L5_MemoryAwareAgent.md  README.md  inputdata.py  main.py  pyproject.toml  requirements.txt  test_memory_manager.py  toolbox.py  utils.py
Coursera_Rust/L5MermoryAwareAgent/data/: inputdata.py
Coursera_Rust/L5MermoryAwareAgent/memory/: memorymanager.py  test_memory_manager.py
Kunde/DaniyalShahrokhian/: Daniyal.md
Kunde/Dr_PhilippKunzhauser/: Dr_PhilippKunzhauser.md
Kunde/Dr_ThomasHoelzner/: Dr_ThomasHoelzner.md
Kunde/ElenaPetrevska/: client.md
Kunde/MonaJKang/: MonaJKang.md
Products/GetSolio/: track.md
Products/Microplastics/: contact.md
Products/SFCSkinCare/: notes.md
VideoAnalyzer/: specs.md
VideoAnalyzer/memory/: Cargo.toml  juxtaposition.md  readme.md  temporal_Decay.md
VideoAnalyzer/memory/LLM_Memory_Oracle/: oracle.md
VideoAnalyzer/memory/src/: lib.rs  main.rs  utils.rs
VideoAnalyzer/memory/tests/: api_tests.rs  tests.md
agentic_ai_course/: agentic_ai_course.md
community-build-up/: playwright.config.ts  pnpm-lock.yaml  vitest.config.ts
olivbackend/: iteration001.md  iteration_002.md  iteration_003.md  main.py  main_002.py  pyproject.toml  utils.py
olivfrontend/: next.config.ts  next.config.ts.old  package.json  pnpm-lock.yaml
(+29 files in other folders)
