[package]
name = "memory"
version = "0.1.0"
edition = "2024"

[dependencies]
# The async runtime - 'full' includes networking, timers, and the multi-threaded scheduler
tokio = { version = "1.0", features = ["full"] }
# The web framework
axum = "0.7"

# Serialization/Deserialization - 'derive' lets you use #[derive(Deserialize)]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.5.3"
